# powerflow

./: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
.auto-imports/: auto-imports.d.ts
.cargo/: config.toml
.github/workflows/: build.yaml  dev-build.yaml
crates/tpower/: Cargo.toml
crates/tpower/src/ffi/: mod.rs
crates/tpower/src/provider/: remote.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device.rs  local.rs  menu.rs  tray_icon.rs  util.rs
src/assets/: index.css
src/lib/: setup.ts
