[package]
name = "tpower"
version = "0.2.2"
edition = "2021"

[features]
specta = [
  "dep:specta",
  "dep:specta-typescript"
]

[dependencies]
core-foundation = "0.10.1"
libc = "0.2.174"
mach = "0.3.2"
scopefn = { version = "0.0.2", features = [ "run_if" ] }
ratatui = "0.29.0"
crossterm = "0.28.1"
thiserror = "2.0.12"
log = "0.4.27"
log4rs = "1.3.0"
io-kit-sys = "0.4.1"
anyhow = "1.0.98"
humantime = "2.2.0"
indexmap = "2.10.0"
plist = "1.7.2"
serde = { version = "1.0.219", features = [ "derive" ] }
specta = { optional = true, version = "=2.0.0-rc.20", features = [
  "serde",
  "serde_json",
  "derive",
] }
specta-typescript = { optional = true, version = "0.0.7" }
derive_more = { version = "1.0.0", features = [
  "add",
  "mul"
] }
