[package]
name = "tpower"
version = "0.2.2"
edition = "2021"

[features]
specta = [
  "dep:specta",
  "dep:specta-typescript"
]

[dependencies]
core-foundation = "0.10.1"
libc = "0.2.176"
mach = "0.3.2"
scopefn = { version = "0.0.2", features = [ "run_if" ] }
ratatui = "0.29.0"
crossterm = "0.29.0"
thiserror = "2.0.16"
log = "0.4.28"
log4rs = "1.4.0"
io-kit-sys = "0.4.1"
anyhow = "1.0.100"
humantime = "2.3.0"
indexmap = "2.11.4"
plist = "1.8.0"
serde = { version = "1.0.226", features = [ "derive" ] }
specta = { optional = true, version = "=2.0.0-rc.22", features = [
  "serde",
  "serde_json",
  "derive",
] }
specta-typescript = { optional = true, version = "0.0.9" }
derive_more = { version = "2.0.1", features = [
  "add",
  "mul"
] }
